--- a/resources/assets/sass/layout/_contactus.scss
+++ b/resources/assets/sass/layout/_contactus.scss
@@ -15,6 +15,10 @@
         gap: 140px;
         padding-bottom: 80px;
 
+        @media only screen and (max-width: $mobile) {
+            grid-template-columns: 1fr;
+        }
+
         .cu-form {
             display: grid;
             place-items: center;
