--- a/public/css/app.css
+++ b/public/css/app.css
@@ -233,7 +233,7 @@ footer,
 .icon-edit {
   width: 16px;
   height: 16px;
-  background-image: url('data:image/svg+xml;utf8,<svg width="24px" height="24px" viewBox="0 0 16 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="%23c7c7c7" stroke="transparent" stroke-width="0" style="" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>');
+  background-image: url('data:image/svg+xml;utf8,<svg width="24px" height="24px" viewBox="0 0 36 36" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path fill="%23c7c7c7" stroke="transparent" stroke-width="0" style="" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/></svg>');
   cursor: pointer;
 }
 
@@ -319,6 +319,7 @@ nav .icon-menu .line {
 @media only screen and (max-width: 768px) {
   nav {
     gap: 30%;
+    z-index: 4;
   }
 
   nav .nav-links {
