--- a/resources/assets/sass/components/_navigation.scss
+++ b/resources/assets/sass/components/_navigation.scss
@@ -64,6 +64,7 @@ nav {
 
     @media only screen and (max-width: 768px) {
         gap: 30%;
+        z-index: 4;
 
         .nav-links {
             display: grid;
